--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,13 +1,13 @@
 spring:
   datasource:
-    url: jdbc:h2:tcp://localhost/~/jpashop;MVCC=true
+    url: jdbc:h2:tcp://localhost/~/jpashop
     username: sa
     password:
     driver-class-name: org.h2.Driver
 
-jpa:
-  hibernate:
-    ddl-auto: create
+  jpa:
+    hibernate:
+      ddl-auto: create
     properties:
       hibernate:
 #        show_sql: true
